test/valid/fc34950_returnObject/Test.plume
/**
 * @author namartins 
 * @version $Id: Test.plume 482 2012-06-04 19:07:29Z tcomp000 $ 
 *
 */
 class Test extends Object is
	 	
	method run : () -> Object is
		true.toString() + " " + 1.toString() + " teste" 
			    	
	method main : () -> String is
		run().toString()
		//true 1 teste
	