test/invalid/fc36956_InvalidClassDeclaration/MyClass.plume
/**
 * MyClass.plume
 *
 * Test: classes must be declared in their own files
 *
 * @author Carlos Mao de Ferro
 * @version $Id: MyClass.plume 286 2012-05-01 10:24:19Z tcomp000 $
 */
 class MiClass extends Object is
	method DoSum : () -> Integer is
		4+2